FIX: Responsive Fix for Footer
Since address line was too long and overlapping the content, small responsive fix was placed to solve this issue.

--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -148,6 +148,17 @@ footer {
         font-size:12px;
         @media screen and (max-width:$x-small) {
           padding:0;
+          display: block;
+          margin:20px 0;
+
+          &:first-child {
+            span.text {
+              width:330px;
+              vertical-align: middle;
+              margin-top:-4px;
+            }
+          }
+
         }
       }
 
